--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TS Calc</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script src="../dist/index.js" defer></script>
-  </head>
-  <body>
-    <div id="calc">
-      <h3>Calculadora</h3>
-      <div id="operations">
-        <div id="previous-operation">ads</div>
-        <div id="current-operation"></div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>TS Calc</title>
+      <!--Link styles-->
+      <link rel="stylesheet" href="./assets/css/styles.css" />
+      <!--Link scripts-->
+      <script src="../dist/index.js" defer></script>
+      <!--Link fontawsome-->
+      <script
+         src="https://kit.fontawesome.com/7a19ffbb9e.js"
+         crossorigin="anonymous"
+         defer
+      ></script>
+   </head>
+   <body>
+      <div id="calc">
+         <h3>Calculadora</h3>
+         <div id="operations">
+            <div id="previous-operation"></div>
+            <div id="current-operation"></div>
+         </div>
+         <button id="change-btn"><i class="fa-solid fa-rotate"></i></button>
+         <div id="buttons-container">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="essential">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="essential">0</button>
+            <button class="essential">.</button>
+            <button class="essential" id="ce-btn">CE</button>
+            <button class="essential" id="res-btn">BINARY</button>
+            <button class="essential" id="ca-btn">CA</button>
+         </div>
       </div>
-      <div id="buttons-container">
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">0</button>
-        <button class="number">.</button>
-        <button id="ce-btn">CE</button>
-        <button id="bin-btn">BINARY</button>
-        <button id="ca-btn">CA</button>
-      </div>
-    </div>
-  </body>
+   </body>
 </html>
